--- a/paid-subscribe/index.html
+++ b/paid-subscribe/index.html
@@ -442,6 +442,81 @@
                             <hr />
                                                         <div class="panel panel-default">
                                 <div class="panel-heading">
+                                    <a href="javascript:;" class="js_to" data-url="https://kkjiasu.top/#/register?code=" data-type="KKjiasu" data-code="Jgf8FsxV" target="_blank"><b>KK加速</b></a>
+                                </div>
+                                <div class="panel-body">
+                                    
+                                    <dl>
+                                        <dt>资费</dt>
+                                                                                <dd>
+                                            <p>
+                                                <label>Pro | 不限时：</label> ¥68.00 /一次性。 
+                                                                                                不限时200G高速流量; 
+                                                                                                不限速，畅享极速网络; 
+                                                                                                仅限个人使用（不限制设备）; 
+                                                                                                全球 BGP+内网跨境专线; 
+                                                                                                支持Netflix等流媒体服务; 
+                                                                                                售后 24*7在线客服为您售后; 
+                                                                                                不记录任何网络日志，放心使用！; 
+                                                                                            </p>
+                                        </dd>
+                                                                                <dd>
+                                            <p>
+                                                <label>Air | 不限时：</label> ¥38.00 /一次性。 
+                                                                                                不限时100G高速流量; 
+                                                                                                不限速，畅享极速网络; 
+                                                                                                仅限个人使用（不限制设备）; 
+                                                                                                全球 BGP+内网跨境专线; 
+                                                                                                支持Netflix等流媒体服务; 
+                                                                                                售后 24*7在线客服为您售后; 
+                                                                                                不记录任何网络日志，放心使用！; 
+                                                                                            </p>
+                                        </dd>
+                                                                                <dd>
+                                            <p>
+                                                <label>专业级：</label> ¥18.00 /每月。 
+                                                                                                每月500G高速流量; 
+                                                                                                1Gbps带宽，畅享极速网络; 
+                                                                                                仅限小团体使用（不限制设备）; 
+                                                                                                全球 BGP+内网跨境专线; 
+                                                                                                支持Netflix等流媒体服务; 
+                                                                                                售后 24*7在线客服为您售后; 
+                                                                                                不记录任何网络日志，放心使用！; 
+                                                                                            </p>
+                                        </dd>
+                                                                                <dd>
+                                            <p>
+                                                <label>体验级：</label> ¥8.00 /每月。 
+                                                                                                每月168G高速流量; 
+                                                                                                300Mbps带宽，畅享极速网络; 
+                                                                                                仅限个人使用（不限制设备）; 
+                                                                                                全球 BGP+内网跨境专线; 
+                                                                                                支持Netflix等流媒体服务; 
+                                                                                                售后 24*7在线客服为您售后; 
+                                                                                                不记录任何网络日志，放心使用！; 
+                                                                                            </p>
+                                        </dd>
+                                                                                <dd>
+                                            <p>
+                                                <label>体验级：</label> ¥8.00 /每月。 
+                                                                                                每月168G高速流量; 
+                                                                                                300Mbps带宽，畅享极速网络; 
+                                                                                                仅限个人使用（不限制设备）; 
+                                                                                                全球 BGP+内网跨境专线; 
+                                                                                                支持Netflix等流媒体服务; 
+                                                                                                售后 24*7在线客服为您售后; 
+                                                                                                不记录任何网络日志，放心使用！; 
+                                                                                            </p>
+                                        </dd>
+                                                                            </dl>
+                                </div>
+                                <div class="panel-footer">
+                                    <a href="javascript:;" class="js_to" data-url="https://kkjiasu.top/#/register?code=" data-type="KKjiasu" data-code="Jgf8FsxV" target="_blank">点击查看</a>
+                                </div>
+                            </div>
+                            <hr />
+                                                        <div class="panel panel-default">
+                                <div class="panel-heading">
                                     <a href="javascript:;" class="js_to" data-url="https://eded.keley02.top/#/login?code=" data-type="Keleyun" data-code="2gL62wdk" target="_blank"><b>可乐云</b></a>
                                 </div>
                                 <div class="panel-body">
@@ -551,16 +626,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-3-16-free-v2ray.htm" title="VPN设备 | 3月16日23M/S|免费VPN/V2ray/Clash/SSR/Shadowrocket免费节点订阅分享">VPN设备 | 3月16日23M/S|免费VPN/V2ray/Clash/SSR/Shadowrocket免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-64179.htm" title="Spring源码分析Spring BeanFactory 是怎么创建的？">Spring源码分析Spring BeanFactory 是怎么创建的？</a></li>
-                        <li class="py-2"><a href="/news/article-79953.htm" title="动物医院在哪个位置好一点（动物医院价目表）">动物医院在哪个位置好一点（动物医院价目表）</a></li>
-                        <li class="py-2"><a href="/news/article-57252.htm" title="中国宠物食品排名（中国宠物食品排名榜）">中国宠物食品排名（中国宠物食品排名榜）</a></li>
-                        <li class="py-2"><a href="/news/article-69857.htm" title="动物医院叫什么名字好听的（动物医院名称大全）">动物医院叫什么名字好听的（动物医院名称大全）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-2-22-free-subscribe-node.htm" title="VPN设备 | 2月22日18.5M/S|免费VPN/Clash/SSR/Shadowrocket/V2ray免费节点订阅分享">VPN设备 | 2月22日18.5M/S|免费VPN/Clash/SSR/Shadowrocket/V2ray免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-76529.htm" title="新手开店适合开什么店小投资（新手开店适合开什么店小投资好）">新手开店适合开什么店小投资（新手开店适合开什么店小投资好）</a></li>
-                        <li class="py-2"><a href="/news/article-67906.htm" title="动物疫苗有没有毒性成分组成（动物疫苗的重要性）">动物疫苗有没有毒性成分组成（动物疫苗的重要性）</a></li>
+                        <li class="py-2"><a href="/news/article-57746.htm" title="广州领养宠物的地方是哪里（广州有领养宠物猫的地方吗?）">广州领养宠物的地方是哪里（广州有领养宠物猫的地方吗?）</a></li>
+                        <li class="py-2"><a href="/news/article-62379.htm" title="动物防疫中心站（动物防疫中心站是干嘛）">动物防疫中心站（动物防疫中心站是干嘛）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-15-node-share.htm" title="VPN设备 | 3月15日20.3M/S|免费VPN/V2ray/Clash/SSR/Shadowrocket免费节点订阅分享">VPN设备 | 3月15日20.3M/S|免费VPN/V2ray/Clash/SSR/Shadowrocket免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-29-free-v2ray-subscribe.htm" title="VPN设备 | 3月29日22.5M/S|免费VPN/V2ray/SSR/Clash/Shadowrocket免费节点订阅分享">VPN设备 | 3月29日22.5M/S|免费VPN/V2ray/SSR/Clash/Shadowrocket免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-69855.htm" title="vue中同时监听多个参数的实现_vue.js">vue中同时监听多个参数的实现_vue.js</a></li>
+                        <li class="py-2"><a href="/news/article-66026.htm" title="宠物店一般卖几个月的猫 宠物店一般卖几个月的猫咪">宠物店一般卖几个月的猫 宠物店一般卖几个月的猫咪</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-12-node-share.htm" title="VPN设备 | 3月12日19.1M/S|免费VPN/SSR/Clash/Shadowrocket/V2ray免费节点订阅分享">VPN设备 | 3月12日19.1M/S|免费VPN/SSR/Clash/Shadowrocket/V2ray免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-62968.htm" title="附近免费领养小狗在哪里（附近哪里可以领养宠物）">附近免费领养小狗在哪里（附近哪里可以领养宠物）</a></li>
                         <li class="py-2"><a href="/news/article-57251.htm" title="vs code编写web项目">vs code编写web项目</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-2-21-node-share-links.htm" title="VPN设备 | 2月21日21.8M/S|免费VPN/SSR/Shadowrocket/V2ray/Clash免费节点订阅分享">VPN设备 | 2月21日21.8M/S|免费VPN/SSR/Shadowrocket/V2ray/Clash免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-69207.htm" title="华畜兽药是哪个公司的（华畜兽药可排第几名）">华畜兽药是哪个公司的（华畜兽药可排第几名）</a></li>
                     </ul>
     </div>
 </div>
@@ -572,7 +647,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">84</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
+                <h4><span class="badge" style="float: right;">90</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">42</span> <a href="/date/2025-02/" title="2025-02 归档">2025-02</a></h4>
